# bbios-os

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
bbi_os/: __init__.py  __main__.py  app.py  auth.py  domain.py  entity_repository.py  entity_routing.py  observability.py  operational.py  persistence.py  response_contract.py  settings.py
bbi_os/api/: __init__.py  v1.py
bbi_os/client_execution/: __init__.py  api.py  engine.py  errors.py  executor.py  models.py  router.py  (+3 more)
cockpit-ui/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: ARCHITECTURE_DECISIONS.md  COCKPIT_BASELINE_STABILIZATION_PLAN.md  CONTRIBUTING.md  DEVELOPMENT_STANDARDS.md  ENGINEERING_MASTER_PLAN.md  OPERATIONAL_READINESS_PLAN.md  PERSISTENCE_ABSTRACTION.md  PHASE_2_REPOSITORY_CONTRACT_AUDIT.md  POSTGRESQL_PERSISTENCE_READINESS_ASSESSMENT.md  RELEASE_NOTES_v0.1.0.md  RELEASE_PLAN.md  REPOSITORY_CONTRACTS.md  SERVICE_CONTRACTS.md  TESTING_STRATEGY.md  TYPED_BOUNDARY_MODELS.md
generated_system/: api.py  router.py  service.py
tests/: test_api_v1_adapter.py  test_auth.py  test_client_management.py  test_client_pipeline.py  test_cockpit.py  test_domain.py  test_execution.py  test_integrations.py  test_monetization.py  test_observability.py  test_onboarding.py  test_operational_middleware.py  test_persistence_abstraction.py  test_repository_contracts.py  test_runtime_contract.py  test_service_contracts.py  test_settings.py  test_task_api.py  test_task_boundary_models.py  test_task_service.py  test_workflow_templates.py  test_workflows.py
(+108 files in other folders)
