[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bbios-os"
version = "0.1.0"
description = "Biggs Bold Ink backend operating system prototype"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.128.8,<0.129",
    "pydantic>=2.13.4,<3",
    "PyYAML>=6.0.3,<7",
    "uvicorn>=0.39.0,<0.40",
]

[tool.setuptools.packages.find]
include = ["bbi_os*"]
